css/styles.css
/* ... */
a {
    color: var(--secondary-color);
}

body {
    font-family: var(--font-family);
    font-weight: var(--font-weight-400);
    font-size: var(--font-size);
    /*Sets the font size to 16px*/
    line-height: var(--line-height);
    /* Sets the line-height to 1.6 */
    background-color: var(--primary-color);
    color: var(--secondary-color);
}


h1 {
    font-size: 30px;
    font-weight: var(--font-weight-700);
}

h2 {
    font-size: 24px;
    font-weight: var(--font-weight-700);
}

h3 {
    font-size: 18px;
    font-weight: var(--font-weight-700);
}

.cv {
    margin-left: var(--margin-left-25);
}

a {
    color: var(--secondary-color);
}

    a:visited {
        /* visited link */
        color: var(--secondary-color);
        opacity: var(--standard-opacity);
    }

    a:hover, a:focus {
        /* No underlining when hovering over a link*/
        font-weight: bold;
    }

    a:active {
        /* selected link*/
        color: var(--secondary-color);
    }

button {
    /* overwrites browser defaults and resets the border */
    border: none;
    /* takes the font from the outer container */
    font-family: inherit;
    /* styles the background color, font, color, and text decoration (underline, etc.) of the button */
    background-color: var(--coral);
    color: var(--primary-color);
    margin-left: 100px;
    text-decoration: var(--no-text-decoration);
    /*adds spacing to the button*/
    padding: var(--padding-10);
    border-radius: var(--border-radius);
    /* gives the button a bottom border with a width of 2px, a type of solid, and a color in RGBA format*/
    border-bottom: var(--border-bottom);
}

    button:hover, button:focus {
        /* lets the mouse appear as a hand when hovering over the button */
        cursor: var(--cursor-pointer);
        /* reduces the opacity of the button to 80% */
        opacity: var(--standard-opacity);
    }

.button__secondary {
    background-color: var(--secondary-color);
    color: var(--primary-color);
}

main {
    margin-top: 150px;
    display: var(--display-flex);
    justify-content: var(--justify-content-center);
}

.main-about {
    margin-top: 40px;
    --text-align-center: center;
}

.profile {
    max-width: 700px;
    display: var(--display-block);
    justify-content: var(--justify-content-center);
}

.profile__portrait img {
    height: 250px;
    width: 40%;
    margin: auto;
    border-radius: 50%;
    display: var(--display-block);
    align-items: center;
}




.profile__welcome {
    display: var(--display-block);
    text-align: var(--text-align-center);
}

.enterprise_logo {
    margin: var(--margin-25);
    display: var(--display-inline-block);
    height: var(--height-150);
}

.navigation-list {
    list-style-type: none;
    margin-right: 25px;
}

    .navigation-list li {
        display: var(--display-inline-block);
        margin-left: var(--margin-left-15);
    }



.top-menu {
    display: var(--display-inline);
}

.page-footer {
    clear: both;
    display: flex;
    flex-direction: column;
    text-align: var(--text-align-center);
    margin-bottom: 10px;
}


* {
    box-sizing: border-box;
}

.page-header {
    display: var(--display-flex);
    width: var(--width-100)
}

.page-header__item {
    flex: var(--flex);
    width: var(--width-25);
    height: var(--height-150);
    margin: var(--margin-25);
}

.about__face {
    flex: var(--flex);
    width: var(--width-25);
    height: 300px;
    margin: var(--margin-25);
}


.page-header__item:last-child {
    flex-grow: 1;
    text-align: right;
}

.main-contact, .main-work {
    margin: 50px auto;
    display: var(--display-block);
    text-align: var(--text-align-center);
    width: var(--width-100);
}

.grid {
    display: var(--display-grid);
    margin: var(--margin-grid);
    grid-template-columns: 750px 750px;
    grid-template-rows: 325px 325px;
    grid-gap: var(--grid-gap);
    max-width: var(--max-width-100);
}

.grid__item {
    background-color: var(--secondary-color);
    color: var(--primary-color);
    padding: 25px;
    display: var(--display-inline-block);
    width: var(--width-100);
    justify-content: var(--justify-content-center);
}


.contact__grid {
    display: var(--display-grid);
    margin: var(--margin-grid);
    grid-template-columns: 1500px 1500px;
    grid-template-rows: 1500px;
    grid-gap: var(--grid-gap);
    text-align: left;
    max-width: var(--max-width-100);
    display: var(--display-block);
}

.contact__item {
    background-color: var(--secondary-color);
    color: var(--primary-color);
    display: var(--display-inline-block);
    width: var(--width-100);
    padding-left: 20px;
    height: var(--height-750);
}

#fullname, #contact-email {
    width: 30%;
}

#my-input {
    width: 275px;
}

#aboutyou, #need, #message {
    width: 90%;
    height: var(--height-150);
}

.contact__button, #contact__button {
    margin-left: 250px;
    background-color: var(--coral);
    color: var(--primary-color);
}

.contact__item a {
    color: var(--primary-color);
}

.main-work h1 {
    text-align: var(--text-align-center);
}


.links {
    display: var(--display-block);
    text-align: var(--text-align-center);
    margin-top: var(--margin-top-30);
}

.work__link {
    margin-top: 60px;
    text-align: var(--text-align-center);
}

.social-media {
    text-align: var(--text-align-center);
}

    .social-media p {
        text-align: var(--text-align-center);
    }

.icon-container {
    text-align: var(--text-align-center);
}

.social-media__icon {
    margin-right: 10px;
}

.profile_about {
    margin-left: var(--margin-left-25);
    text-align: var(--text-align-center);

}
/* ... */

